tests/error/poly_errors_py312/invalid_bound2.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct[x: (42, 43)]:
    pass


guppy.compile(MyStruct)
