tests/error/poly_errors_py312/invalid_bound2.err
Error: Expected a type (at $FILE:5:19)
  | 
3 | 
4 | @guppy.struct
5 | class MyStruct[x: (42, 43)]:
  |                    ^^ Expected a type, got value of type `nat`

Guppy compilation failed due to 1 previous error
